// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartAxis test Check render ChartAxis X component 1`] = `
<g>
  <polyline
    className="css-1ied4zn-line"
    points="1,1 2,2"
  />
  <text
    className="css-1nvft8-label"
    x={10}
    y={34}
  >
    1
  </text>
  <text
    className="css-1nvft8-label"
    x={20}
    y={34}
  >
    2
  </text>
</g>
`;

exports[`ChartAxis test Check render ChartAxis Y component 1`] = `
<g>
  <polyline
    className="css-1ied4zn-line"
    points="1,1 2,2"
  />
  <g>
    <text
      className="css-1nvft8-label"
      x={10}
      y={0}
    >
      1
    </text>
    <polyline
      className="css-1ied4zn-line"
      points="10,10 10,10"
    />
  </g>
  <g>
    <text
      className="css-1nvft8-label"
      x={10}
      y={8}
    >
      2
    </text>
    <polyline
      className="css-1ied4zn-line"
      points="10,20 10,20"
    />
  </g>
</g>
`;
